remove padding from pre to render better scrollbars, fix spelling error in post, remove newline from post's code

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -742,7 +742,7 @@ pre, code {
     /* background: #f8f7fa; */
     background: #282c34;
     /* padding: 34px; */
-    padding: 17px;
+    /* padding: 17px; */
     /* font-family: "Karla", sans-serif; */
     font-family: "Fira Code", monospace
     color: #abb2bf;
